--- a/css/styles.css
+++ b/css/styles.css
@@ -2,28 +2,14 @@
   0% {
     visibility: visible;
     opacity: 0.3;
-    transform: translate(-100vw, -90%);
+    transform: translate(-110vw, -90%);
   }
-  20% {
-    opacity: 0.6;
-    transform: translate(-80vw, -80%);
-  }
-  40% {
-    transform: translate(-60vw, -30%); 
-
-  }
-  60% {
+  50% {
     opacity: 0.8;
-    transform: translate(-40vw, -20%); 
-    width: 10rem;
-  }
-  80% {
-    opacity: 1;
-    transform: translate(-30vw, -30%); 
-    width: 6rem;
+    transform: translate(-50vw, 30%); 
   }
   99% {
-    transform: translate(-10vw, -1%); 
+    transform: translate(-.2vw); 
   }
   100% {
     transform: translate(0); 
@@ -38,14 +24,14 @@
 .section {
   width: 100vw;
   height: 100vh;
-  background-color: lightblue;
+  background-color: #3c5870;
 }
 
 #pinkman {
   visibility: visible;
   position: absolute;
   width: 7rem;
-  top: 50%;
+  top: 30%;
   right: 8px;
   animation: moveInRight 4s ease-out;
 }
